fix: Replace use of multiple keyword syntax in overflow for Safari

--- a/app/static/scss/project/_control-panel.scss
+++ b/app/static/scss/project/_control-panel.scss
@@ -37,7 +37,8 @@ $controlPanelBorderRadius: 8px;
     flex: 1;
     display: flex;
     position: relative;
-    overflow: auto hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 
   &__tab {
